crates/wdl-analysis/tests/validation/unsupported-version/source.errors
error: unsupported WDL version `100000.0`
  ┌─ tests/validation/unsupported-version/source.wdl:3:9
  │
3 │ version 100000.0
  │         ^^^^^^^^ this version of WDL is not supported
  │
  = fix: either use a supported WDL version or configure `common.wdl.fallback_version` to set a fallback version

